--- a/css/creative.css
+++ b/css/creative.css
@@ -66,6 +66,9 @@ section {
 
 .section-heading {
   margin-top: 0;
+  font-family: Righteous;
+  /* font-family: Lobster; */
+  /* font-family: Fjalla One; */
 }
 
 ::-moz-selection {
