--- a/css/master.css
+++ b/css/master.css
@@ -127,7 +127,7 @@ body{
 }
 
 .panel-primary{
-  background-color: #2c3e50;
+  background-color: #111;
   color: #fff;
 }
 
@@ -136,7 +136,7 @@ body{
     font-size: 2em;
     font-family: Fjalla One;
     text-align: center;
-    background-color: #2c3e50;
+    /* background-color: #2c3e50; */
     border-color: #2c3e50;
 }
 
